[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rich_progress_table"
authors = [{name = "Andrew Kettmann", email = "akettmann@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.6"
dependencies = [
    "rich==10.16.2"
]

